--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <script>
-    (function (w) { var i = w.SENTRY_RELEASE = w.SENTRY_RELEASE || {}; i.id = '69abc89sdze1b8a32d97a'; })(this);
+    (function (w) { var i = w.SENTRY_RELEASE = w.SENTRY_RELEASE || {}; i.id = '844542ae5b68b4b118aa'; })(this);
   </script>
   <!-- sentry-cordova -->
   <meta charset="UTF-8">
@@ -19,11 +19,14 @@
   <meta name="theme-color" content="#4e8ef7">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700|Open+Sans:400,600" rel="stylesheet">
 
+  <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
   <script src="assets/js/cio.js"></script>
 
   <link href="assets/indigo-pink.css" rel="stylesheet">
   <link href="build/main.css" rel="stylesheet">
+
+
 
 </head>
 
@@ -42,7 +45,6 @@
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
-  <!-- <script src=""></script> include syncroll script here -->
 </body>
 
 </html>
